<resources>
    <string name="app_name">Kelvinator</string>
    <string name="action_settings">Settings</string>
    <string name="select_an_input_temperature_unit">Select Unit</string>
    <string name="radCelsius">Celsius</string>
    <string name="radKelvin">Kelvin</string>
    <string name="radFahrenheit">Fahrenheit</string>
    <string name="txtValueToBeConverted">Enter value to convert</string>

    <string name="txtUnitNotation_C">℃</string>
    <string name="txtUnitNotation_F">℉</string>
    <string name="txtUnitNotation_K">K</string>

    <string name="txtHeader_Results">Results</string>
    <string name="txtResult_C">0</string>
    <string name="txtResult_F">0</string>
    <string name="txtResult_K">0</string>
    <string name="txt_CurrentUnitSymbol">℃</string>
    <string name="title_activity_about">About</string>
    <string name="menu_about">About</string>
    <string name="imgTesseractLogo">Logo</string>
    <string name="txtKelvinator">Kelvinator</string>
    <string name="txtAppVersion">v</string>
    <string name="txtTesseractStrategies">Tesseract Strategies</string>
    <string name="title_activity_distances">Distances</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="txt_metric">Metric</string>
    <string name="txt_imperial">Imperial</string>
    <string name="txtResult_dm">0</string>
    <string name="txtUnit_dm">dm</string>
    <string name="txtUnit_m">m</string>
    <string name="txtResult_m">0</string>
    <string name="txtResult_cm">0</string>
    <string name="txtUnit_cm">cm</string>
    <string name="txtUnit_mm">mm</string>
    <string name="txtResult_mm">0</string>
    <string name="txtDistResultsHeader">Results</string>

</resources>
